<resources>
    <string name="app_name">Nekurabe</string>
    <string name="home_label">Home</string>
    <string name="home_navigate_to_store_list">Store List</string>
    <string name="item_detail_created_at_label">Created At:</string>
    <string name="item_detail_label">Item</string>
    <string name="item_detail_name_label">Name:</string>
    <string name="item_detail_updated_at_label">Updated At:</string>
    <string name="item_edit_created_at_label">Created At:</string>
    <string name="item_edit_destroy_label">Delete Item</string>
    <string name="item_edit_edit_label">Edit Item</string>
    <string name="item_edit_label">Item Edit</string>
    <string name="item_edit_name_label">Name:</string>
    <string name="item_edit_save">Save</string>
    <string name="item_edit_updated_at_label">Updated At:</string>
    <string name="item_list_label">Item List</string>
    <string name="item_list_new_item">New item</string>
    <string name="store_detail_created_at_label">Created At:</string>
    <string name="store_detail_id_label">ID:</string>
    <string name="store_detail_label">Store</string>
    <string name="store_detail_name_label">Name:</string>
    <string name="store_detail_updated_at_label">Updated At:</string>
    <string name="store_edit_created_at_label">Created At:</string>
    <string name="store_edit_destroy_label">Delete Store</string>
    <string name="store_edit_edit_label">Edit Store</string>
    <string name="store_edit_id_label">ID:</string>
    <string name="store_edit_label">Store Edit</string>
    <string name="store_edit_name_label">Name:</string>
    <string name="store_edit_save">Save</string>
    <string name="store_edit_updated_at_label">Updated At:</string>
    <string name="store_list_label">Store List</string>
    <string name="store_list_new_store">New store</string>
    <string name="home_navigate_to_price_list">Price List</string>
    <string name="price_list_label">Price List</string>
    <string name="price_edit_label">Price Edit</string>
    <string name="price_edit_price_label">Price:</string>
    <string name="price_edit_created_at_label">Created At:</string>
    <string name="price_edit_updated_at_label">Updated At:</string>
    <string name="price_edit_save">Save</string>
    <string name="price_edit_amount_label">Amount:</string>
    <string name="price_edit_store_label">Store:</string>
    <string name="price_edit_item_label">Item:</string>
    <string name="price_detail_label">Price</string>
    <string name="price_detail_item_label">Item:</string>
    <string name="price_detail_store_label">Store:</string>
    <string name="price_detail_price_label">Price:</string>
    <string name="price_detail_amount_label">Amount:</string>
    <string name="price_detail_created_at_label">Created At:</string>
    <string name="price_detail_updated_at_label">Updated At:</string>
    <string name="price_detail_edit_label">Edit Price</string>
    <string name="price_edit_destroy_label">Delete Price</string>
    <string name="price_edit_including_tax_label">Including Tax:</string>
</resources>
