<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="net.bouzuya.nekurabe.ui.PriceDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.PriceDetailFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/price_detail_item"
            android:text="@string/price_detail_item_label" />

        <TextView
            android:id="@+id/price_detail_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.itemName}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/price_detail_store"
            android:text="@string/price_detail_store_label" />

        <TextView
            android:id="@+id/price_detail_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.storeName}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/price_detail_price"
            android:text="@string/price_detail_price_label" />

        <TextView
            android:id="@+id/price_detail_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.priceText}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/price_detail_amount"
            android:text="@string/price_detail_amount_label" />

        <TextView
            android:id="@+id/price_detail_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.amountText}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_detail_created_at_label" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.createdAt}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_detail_updated_at_label" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.updatedAt}" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.edit()}"
            android:text="@string/price_detail_edit_label" />
    </LinearLayout>
</layout>